# static/api/v1/openapi.json
@@ -1033,6 +1033,8 @@
 					"productDescription",
 					"reason",
 					"recallingOrganization",
+					"packageDescription",
+					"codeInformation",
 					"requiresPackageCheck",
 					"reportDate",
 					"recallInitiatedAt",
@@ -1049,6 +1051,8 @@
 					"productDescription": { "type": "string" },
 					"reason": { "type": ["string", "null"] },
 					"recallingOrganization": { "type": ["string", "null"] },
+					"packageDescription": { "type": ["string", "null"] },
+					"codeInformation": { "type": ["string", "null"] },
 					"requiresPackageCheck": { "type": "boolean" },
 					"reportDate": { "type": ["string", "null"], "format": "date" },
 					"recallInitiatedAt": { "type": ["string", "null"] },
